manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: host-mutator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-mutator
  template:
    metadata:
      labels:
        app: host-mutator
    spec:
      containers:
      - name: host-mutator
        image: antonosmond/host-mutator:1.0.0
        ports:
        - name: http
          containerPort: 8443
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8443
            scheme: HTTPS
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: webhook-certificates
          mountPath: /etc/webhook/certs
          readOnly: true
      volumes:
      - name: webhook-certificates
        emptyDir: {}
