manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: host-mutator
spec:
  type: ClusterIP
  selector:
    app: host-mutator
  ports:
  - name: http
    port: 443
    targetPort: http
