manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: host-mutator
webhooks:
- name: host-mutator.default.svc.cluster.local
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1Ea3dOVEV4TkRrek4xb1hEVEk1TURrd01qRXhORGt6TjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTEFsCjFNZ0ZhQmhtYUdjYXQ2TVRSYTM3VHd4NlloT3c1WC9CQnc3eHM1Wk8yeXN5YS9WSkZ4RFpFRDhXcjYwdlJNY1YKY3Rhc1JXdlRJdjh3L1BhOGpmT0pjNVBYZlFKUlM1SmI2NHh5RzlKZFhxakJRQzd5U3ZKMHZKVDR0WjE0TUZIVgpJWjg2dUpDRWt6bG [...]
    service:
      name: host-mutator
      namespace: default
      path: /mutate
  failurePolicy: Fail
  namespaceSelector:
    matchLabels:
      "host-mutator": enabled
  rules:
  - apiGroups: ["extensions"]
    apiVersions: ["v1beta1"]
    operations: ["CREATE", "UPDATE"]
    resources: ["ingresses"]
    scope: Namespaced
